cmake_minimum_required(VERSION 3.3.2)
project (121Nat)
INCLUDE_DIRECTORIES(lib/src/jsoncpp/include)
INCLUDE_DIRECTORIES(lib/src/libtins/include)
INCLUDE_DIRECTORIES(lib/src/easyloggingpp/src/)
ADD_SUBDIRECTORY(src)
SET(JSONCPP_WITH_TESTS OFF CACHE BOOL "test8")
SET(JSONCPP_WITH_POST_BUILD_UNITTEST OFF CACHE BOOL "tes9")
SET(JSONCPP_WITH_PKGCONFIG_SUPPORT OFF CACHE BOOL "test10")
SET(JSONCPP_WITH_CMAKE_PACKAGE OFF CACHE BOOL "test11")
SET(BUILD_SHARED_LIBS OFF CACHE BOOL "test12")
SET(BUILD_STATIC_LIBS ON CACHE BOOL "test13")
ADD_SUBDIRECTORY(lib/src/jsoncpp)
SET(BUILD_SHARED_LIBS ON)
SET(LIBTINS_BUILD_SHARED OFF CACHE BOOL "test")
SET(LIBTINS_ENABLE_CXX11 ON CACHE BOOL "test2")
SET(LIBTINS_ENABLE_WPA2 OFF CACHE BOOL "test3")
SET(LIBTINS_ENABLE_DOT11 OFF CACHE BOOL "test4")
SET(HAVE_PCAP_IMMEDIATE_MODE ON CACHE BOOL "test5")
SET(LIBTINS_ENABLE_ACK_TRACKER OFF CACHE BOOL "test6")
SET(LIBTINS_ENABLE_WPA2_CALLBACKS OFF CACHE BOOL "test7")
SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/lib/src/libtins/cmake/Modules)
SET(PCAP_ROOT_DIR  $ENV{STAGING_DIR}/usr/ CACHE PATH "test14")
#SET(PCAP_LIBRARY $ENV{STAGING_DIR}/usr/lib/libpcap.a  CACHE FILEPATH "test14")
ADD_SUBDIRECTORY(lib/src/libtins)
set_property(TARGET 121Nat PROPERTY CXX_STANDARD 11)
set_property(TARGET 121Nat PROPERTY CXX_STANDARD_REQUIRED ON)
